fix: swagget docs , auth module added
